	  
	- Fixed BUG#26592 - PreparedStatement is not closed in 
	  BlobFromLocator.getBytes().
	  
	- Fixed BUG#25624 - Whitespace surrounding storage/size specifiers in 
	  stored procedure parameters declaration causes NumberFormatException to 
	  be thrown when calling stored procedure on JDK-1.5 or newer, as the Number
	  classes in JDK-1.5+ are whitespace intolerant.
	 	  
03-01-07 - Version 5.0.5

    - Fixed BUG#23645 - Some collations/character sets reported as "unknown"
	  (specifically cias variants of existing character sets), and inability to override
	  the detected server character set.

	- Performance enhancement of initial character set configuration, driver
      will only send commands required to configure connection character set
      session variables if the current values on the server do not match
      what is required.
      
    - Fixed BUG#24360 .setFetchSize() breaks prepared SHOW and other commands.
          
    - Fixed BUG#24344 - useJDBCCompliantTimezoneShift with server-side prepared
	  statements gives different behavior than when using client-side prepared
	  statements. (this is now fixed if moving from server-side prepared statements
	  to client-side prepared statements by setting "useSSPSCompatibleTimezoneShift" to
	  true", as the driver can't tell if this is a new deployment that never used 
	  server-side prepared statements, or if it is an existing deployment that is
	  switching to client-side prepared statements from server-side prepared statements.

    - Fixed BUG#23304 - DBMD using "show" and DBMD using information_schema do 
      not return results consistent with each other. (note this fix only 
      addresses the inconsistencies, not the issue that the driver is 
      treating schemas differently than some users expect. We will revisit 
      this behavior when there is full support for schemas in MySQL).

    - Fixed BUG#25073 - rewriting batched statements leaks internal statement